[package]
name = "dl_server"
version = "0.1.0"
edition = "2021"
authors = ["Eric Skepz <skepz.dev@gmail.com>"]

[dependencies]
dl_network_common = { path = "../dl_network_common"}
chrono = "*"
better_term = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
ctrlc = "*"
r2d2_postgres = "*"