[package]
name = "dl_server"
version = "0.1.0"
edition = "2021"
authors = ["Eric Skepz <skepz.dev@gmail.com>"]

[dependencies]
dl_network_common = { path = "../dl_network_common"}
chrono = "0.4.23"
better_term = "*"
toml = "0.7.1"
serde = { version = "*", features = ["derive"] }
ctrlc = "*"
r2d2_postgres = "*"
regex = "*"

[dependencies.postgres]
version = "*"
features = ["with-uuid-1", "with-chrono-0_4"]

[dependencies.uuid]
version = "*"
features = ["v4"]